# ApliCalist-Test

./: .gitignore  README.md  pyproject.toml
